--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
       border-radius:16px; padding: 8px 16px; box-shadow: 0 6px 20px rgba(0,0,0,0.25);
       position: relative; user-select: none; border: 1px solid rgba(255, 255, 255, 0.1);
     }
-  .card-body { 
-    display: grid; 
-    grid-template-columns: 1fr auto 1fr; 
-    align-items: center; 
-    gap: 12px; 
-  }
+
 
     /* الهامش بين الرقم وحد البطاقة */
   .score-area { 
@@ -167,21 +162,33 @@
   transform: translateX(-50%);
   z-index: 999;
 
-  width: 150px;    /* 👈 حجم الصورة */
-  height: auto;    /* 👈 يخلي الارتفاع يتعدل تلقائي */
-  
-  object-fit: contain;   /* تبين الصورة كاملة */
-  border: 2px solid #fff; /* لو تحب إطار بسيط أبيض */
-  background: transparent; /* مافي خلفية سوداء */
-  pointer-events: none;    /* ما تغطي على الأزرار */
+  width: 150px;      /* 👈 حجم الصورة */
+  height: auto;      
+
+  object-fit: contain;  
+  background: transparent;
+  pointer-events: none;
+
+  /* 👇 ظل حول الصورة بدل المستطيل الأبيض */
+  box-shadow: 0 8px 16px rgba(0,0,0,0.5);
 }
 
+/* الاسم أسفل الصورة */
 .name {
-  margin-top: 160px; /* نزّل الاسم تحت الصورة */
+  margin-top: 160px;   /* عدل حسب حجم الصورة */
   font-weight: bold;
   font-size: 18px;
   text-align: center;
 }
+
+/* تباعد الأرقام (تقليل المسافة تحت البطاقة) */
+.card-body {
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  gap: 8px;        /* 👈 كان 12px قللته */
+  padding-bottom: 8px; /* 👈 يقلل المسافة الداخلية */
+}
+
 
 
 
