--- a/index.html
+++ b/index.html
@@ -90,11 +90,9 @@
 
 .emoji {
   position: relative;
-  width: 100px;   /* حجم الحاوية (ممكن تغير الرقم) */
-  height: 100px;
-  margin: 0 auto;
-  z-index: 10; /* يخليها فوق */
+  text-align: center;
 }
+
 
 
 
