--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
 }
 .modal h3{ margin:0 0 16px; text-align: center; }
 
-/* أزرار */
+/* أزرار عامة */
 .btn {
   border-radius: 999px; font-weight: bold; border: none;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -151,11 +151,68 @@ body {
 }
 .btn:hover { transform: translateY(-2px); }
 
+/* زر الإضافة الكبير */
+.add-player-fab {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: linear-gradient(135deg, #6c5ce7, #4a3ebc);
+  color: #fff;
+  padding: 14px 28px;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 999px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  z-index: 30;
+}
+.add-player-fab:hover {
+  transform: translateX(-50%) translateY(-3px);
+  box-shadow: 0 8px 22px rgba(0,0,0,0.4);
+}
 
+/* الأزرار الجانبية */
+.corner-btn {
+  position: fixed;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
+  color: #fff;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  z-index: 30;
+}
 
+.corner-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.35);
+}
 
+/* زر المطور (يسار) */
+#devInfoBtn {
+  left: 20px;
+  background: linear-gradient(135deg, #e74c3c, #b93a2d);
+}
 
-    
+/* زر التحديث (يمين) */
+#refreshBtn {
+  right: 20px;
+  background: linear-gradient(135deg, #3498db, #2a80b9);
+}
+
     
   </style>
 </head>
