--- a/index.html
+++ b/index.html
@@ -20,23 +20,28 @@ body {
 
 .wrap { max-width: 600px; margin: 0 auto; padding: 16px; padding-bottom: 100px; }
 
+/* ====== الهيدر (البنر) ====== */
 .header {
   display: flex; flex-direction: column; align-items: center; justify-content: center;
-  gap: 0; background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.1); padding: 12px 14px;
   border-radius: 14px; box-shadow: 0 10px 30px rgba(0, 0, 0, .25);
   cursor: pointer; position: relative; width: 100%; margin-bottom: 12px;
 }
 .header .banner-img {
-  width: 100%; height: 120px; object-fit: cover; object-position: center; border-radius: 8px;
+  width: 100%; height: 120px; object-fit: cover; border-radius: 8px;
 }
 .title {
-  position: absolute; top: 18px; right: 18px; font-weight: 800; letter-spacing:.5px;
+  position: absolute; top: 18px; right: 18px; font-weight: 800;
   font-size: 16px; display:flex; align-items:center; gap:8px;
   background: rgba(0,0,0,0.4); padding: 4px 8px; border-radius: 8px;
 }
-.title .badge { font-size: 11px; color: var(--text); background: rgba(255,255,255,0.1); padding: 2px 8px; border-radius: 999px; }
+.title .badge {
+  font-size: 11px; color: var(--text); background: rgba(255,255,255,0.1);
+  padding: 2px 8px; border-radius: 999px;
+}
 
+/* ====== الكروت ====== */
 .grid { display: flex; flex-direction: column; gap: 12px; }
 
 .card {
@@ -47,7 +52,6 @@ body {
   background: rgba(0,0,0,0.25);
 }
 
-/* هيكل البطاقة */
 .card-body {
   display: grid;
   grid-template-columns: 1fr auto 1fr; /* يسار - الوسط - يمين */
@@ -55,13 +59,8 @@ body {
   gap: 12px;
 }
 
-/* الأرقام */
-.score-area { 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-  position: relative;
-}
+/* ====== الأرقام ====== */
+.score-area { display: flex; align-items: center; justify-content: center; position: relative; }
 .score-card {
   background-color: rgba(0,0,0,0.2);
   border-radius: 8px;
@@ -90,7 +89,7 @@ body {
 .arrow:hover { color: rgba(255,255,255,0.3); }
 .arrow:active { color: rgba(255,255,255,0.5); }
 
-/* الصورة */
+/* ====== الصورة + الاسم ====== */
 .center-col {
   position: relative;
   text-align: center;
@@ -103,7 +102,7 @@ body {
   transform: translateX(-50%);
   z-index: 5;
 
-  width: 120px;   /* 👈 حجم الصورة */
+  width: 120px;
   height: auto;
 
   object-fit: contain;
@@ -112,8 +111,6 @@ body {
 
   box-shadow: 0 8px 16px rgba(0,0,0,0.5);
 }
-
-/* الاسم */
 .name {
   margin: 0;
   font-weight: bold;
@@ -121,11 +118,9 @@ body {
   text-align: center;
   color: var(--text);
 }
-
-/* نخفي الميداليات والكؤوس */
 .badges { display: none !important; }
 
-/* المودال */
+/* ====== المودالات ====== */
 .modal-backdrop {
   position: fixed;
   inset: 0;
@@ -143,7 +138,29 @@ body {
 }
 .modal h3{ margin:0 0 16px; text-align: center; }
 
-/* أزرار عامة */
+/* ====== الألعاب النارية ====== */
+#confetti-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  pointer-events: none;
+  z-index: 120;
+  transition: opacity 0.3s;
+}
+#screen-flash {
+  position: fixed; top: 0; left: 0;
+  width: 100%; height: 100%;
+  pointer-events: none;
+  visibility: hidden; opacity: 0;
+  z-index: 121; background-color: white;
+  transition: opacity 0.5s ease-out;
+}
+#confetti-canvas.active, #screen-flash.active { visibility: visible; opacity: 1; }
+#screen-flash.active { opacity: 0.7; }
+
+/* ====== الأزرار ====== */
 .btn {
   border-radius: 999px; font-weight: bold; border: none;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -178,42 +195,28 @@ body {
   box-shadow: 0 8px 22px rgba(0,0,0,0.4);
 }
 
-/* الأزرار الجانبية */
+/* الأزرار الجانبية (نصوص أنيقة) */
 .corner-btn {
   position: fixed;
   bottom: 20px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  padding: 10px 18px;
+  border-radius: 999px;
   border: none;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25);
   cursor: pointer;
-  display: grid;
-  place-items: center;
-  font-size: 20px;
+  font-size: 14px;
+  font-weight: bold;
   color: #fff;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   z-index: 30;
 }
-
 .corner-btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 6px 16px rgba(0,0,0,0.35);
 }
+#devInfoBtn { left: 20px; background: linear-gradient(135deg, #e74c3c, #b93a2d); }
+#refreshBtn { right: 20px; background: linear-gradient(135deg, #3498db, #2a80b9); }
 
-/* زر المطور (يسار) */
-#devInfoBtn {
-  left: 20px;
-  background: linear-gradient(135deg, #e74c3c, #b93a2d);
-}
-
-/* زر التحديث (يمين) */
-#refreshBtn {
-  right: 20px;
-  background: linear-gradient(135deg, #3498db, #2a80b9);
-}
-
-    
   </style>
 </head>
 <body>
