--- a/index.html
+++ b/index.html
@@ -121,22 +121,68 @@ body {
 .badges { display: none !important; }
 
 /* ====== المودالات ====== */
+/* النوافذ المنبثقة */
 .modal-backdrop {
   position: fixed;
   inset: 0;
   background: rgba(0,0,0,.45);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(6px);
   display: none;
   align-items: center;
   justify-content: center;
-  z-index: 110;
+  z-index: 200; /* فوق كل العناصر */
 }
 .modal-backdrop.active { display: flex !important; }
+
 .modal {
-  width:min(92vw,560px); background:#151935;
-  border:1px solid #2a3257; border-radius:18px; padding:18px;
+  width: min(92vw, 500px);
+  background: rgba(20, 24, 48, 0.95);
+  border: 1px solid rgba(255,255,255,0.08);
+  border-radius: 18px;
+  padding: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+  animation: popIn 0.25s ease;
 }
-.modal h3{ margin:0 0 16px; text-align: center; }
+
+.modal h3 {
+  margin: 0 0 16px;
+  font-size: 20px;
+  text-align: center;
+  color: var(--accent);
+}
+
+.modal p {
+  text-align: center;
+  color: var(--muted);
+  margin-bottom: 18px;
+}
+
+.modal .actions {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+
+.modal .btn {
+  flex: 1;
+  padding: 12px 16px;
+  font-size: 15px;
+  border-radius: 12px;
+  font-weight: bold;
+}
+
+.modal .btn-danger {
+  background: linear-gradient(135deg, #e74c3c, #b93a2d);
+  color: #fff;
+}
+.modal .btn-cancel {
+  background: rgba(255,255,255,0.08);
+  color: var(--text);
+}
+@keyframes popIn {
+  from { transform: scale(0.9); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
 
 /* ====== الألعاب النارية ====== */
 #confetti-canvas {
