--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="wrap">
+        <img class="banner-img" src="banner.jpg" alt="UNO banner">
     <!-- مثال كرت لاعب -->
     <div class="card">
       <div class="card-body">
