--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           </div>
 
           <div class="center-col">
-            <img class="avatar" src="player.png" alt="Player">
+            <!-- ✅ مسار الصورة الصحيح -->
+            <img class="avatar" src="images/player.png" alt="Player">
             <div class="name">اللاعب 1</div>
           </div>
 
