--- a/index.html
+++ b/index.html
@@ -1,29 +1,4 @@
-.winner-card .card-header {
-      position: absolute;
-      bottom: 50%;
-      right: 12px;
-      transform: translateY(50%) rotate(-90deg);
-      transform-origin: center;
-      z-index: 10;
-      pointer-events: none;
-    }
-
-    .winner-card .player-name-section {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      font-size: var(--winner-name-font);
-      color: var(--text);
-      padding: 6px 12px;
-      border-radius: 16px;
-      width: fit-content;
-      background: linear-gradient(to bottom, rgba(255,215,0,0.4), rgba(255,215,0,0.1));
-      backdrop-filter: blur(10px);
-      border: 2px solid rgba(255,215,0,0.3);
-      white-space: nowrap;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-    }<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
@@ -321,9 +296,9 @@
     .card-header {
       position: absolute;
       bottom: 50%;
-      right: 8px;
+      right: -1px;
       transform: translateY(50%) rotate(-90deg);
-      transform-origin: center;
+      transform-origin: right center;
       z-index: 10;
       pointer-events: none;
     }
@@ -336,7 +311,7 @@
       font-size: var(--mobile-name-font);
       color: var(--text);
       padding: 4px 8px;
-      border-radius: 12px;
+      border-radius: 8px 0 0 8px;
       width: fit-content;
       background: linear-gradient(to bottom, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
       backdrop-filter: blur(8px);
