--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 .winner-card .card-header {
       position: absolute;
       top: 70%;
-      right: 0px;
+      right: 8px;
       z-index: 10;
       pointer-events: none;
     }
@@ -14,12 +14,11 @@
       font-size: var(--winner-name-font);
       color: var(--text);
       padding: 8px 6px 8px 12px;
-      border-radius: 10px 0 0 10px;
+      border-radius: 10px;
       width: fit-content;
       background: linear-gradient(to right, rgba(255,215,0,0.4), rgba(255,215,0,0.1));
       backdrop-filter: blur(10px);
       border: 2px solid rgba(255,215,0,0.3);
-      border-right: none;
       white-space: nowrap;
       text-shadow: 0 2px 4px rgba(0,0,0,0.5);
       writing-mode: vertical-rl;
@@ -324,7 +323,7 @@
     .card-header {
       position: absolute;
       top: 70%;
-      right: 0px;
+      right: 5px;
       z-index: 10;
       pointer-events: none;
     }
@@ -337,12 +336,11 @@
       font-size: var(--mobile-name-font);
       color: var(--text);
       padding: 6px 4px 6px 8px;
-      border-radius: 8px 0 0 8px;
+      border-radius: 8px;
       width: fit-content;
       background: linear-gradient(to right, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
       backdrop-filter: blur(8px);
       border: 1px solid rgba(255,255,255,0.15);
-      border-right: none;
       white-space: nowrap;
       writing-mode: vertical-rl;
       text-orientation: mixed;
