--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
       100% { transform: translateY(-5px); }
     }
 
-.card-header {
-  position: relative;
-  margin-top: 10px;   /* مسافة بين الصورة والاسم */
-  text-align: center; /* يوسّط الاسم */
-  z-index: 10;
-}
-
+    .winner-card .card-header {
+      position: absolute;
+      bottom: 12px;
+      right: 12px;
+      z-index: 10;
+      pointer-events: none;
+    }
 
     .winner-card .player-name-section {
       display: flex;
@@ -293,14 +293,13 @@
       justify-content: center;
     }
     
-.card-header {
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  z-index: 10;
-  pointer-events: none;
-}
-
+    .card-header {
+      position: absolute;
+      bottom: 8px;
+      right: 8px;
+      z-index: 10;
+      pointer-events: none;
+    }
     
     .player-name-section {
       display: flex;
