--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 
     .winner-card .card-header {
       position: absolute;
-      bottom: 12px;
-      right: 12px;
+      bottom: 8px;
+      right: 50px;
       z-index: 10;
       pointer-events: none;
     }
@@ -296,7 +296,7 @@
     .card-header {
       position: absolute;
       bottom: 8px;
-      right: 8px;
+      right: 50%;
       z-index: 10;
       pointer-events: none;
     }
@@ -307,8 +307,9 @@
       font-weight: bold;
       font-size: var(--mobile-name-font);
       color: var(--text);
-      padding: 2px 6px;
-      border-radius: 12px;
+      padding: 1px 4px;
+      border-radius: 8px;
+      max-width: 120px;
       width: fit-content;
       background: linear-gradient(to left, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
       backdrop-filter: blur(8px);
