--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     .card-header {
       position: absolute;
       bottom: 8px;
-      right: 8px;
+      right: 50%;
       z-index: 10;
       pointer-events: none;
     }
