--- a/index.html
+++ b/index.html
@@ -320,10 +320,11 @@
       z-index: 15;
     }
 
-    .winner-card .top-icons {
-      top: 15px;
-      width: 108%;
-    }
+.winner-card .top-icons {
+  top: 15px;
+  width: 100%;
+  padding: 0 5px;
+}
 
     .top-icon {
       font-size: var(--mobile-score-icon);
