--- a/index.html
+++ b/index.html
@@ -1020,12 +1020,14 @@
       font-size: var(--icon-font);
       opacity: 0.9;
       filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
+      pointer-events: none; /* منع التفاعل مع الأيقونات العلوية */
     }
 
     .winner-card .top-icon {
       font-size: var(--winner-icon-font);
       opacity: 1;
       filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
+      pointer-events: none; /* منع التفاعل مع الأيقونات العلوية */
     }
     
     /* حاوية الاسم */
