--- a/index.html
+++ b/index.html
@@ -839,7 +839,9 @@
       }
     }
 
-    .winner-card::before {
+   
+  .winner-card::before {
+        /* content: "👑"; */
       content: "👑";
       position: absolute;
       top: clamp(-15px, -3vh, -5px);
