--- a/index.html
+++ b/index.html
@@ -1330,13 +1330,14 @@
                 // تحديد المنطقة: نصف البطاقة العلوي للزيادة، النصف السفلي للتقليل
                 const delta = clickY < cardHeight / 2 ? 1 : -1;
                 
-                // تحديد الجهة: يسار للكؤوس، يمين للميداليات (بعد العكس)
-                let side;
-                if (clickX < cardWidth / 2) {
-                    side = 'right'; // الجهة اليسرى = الكؤوس (بعد العكس)
-                } else {
-                    side = 'left'; // الجهة اليمنى = الميداليات (بعد العكس)
-                }
+// تحديد الجهة: يسار = ميداليات، يمين = كؤوس
+let side;
+if (clickX < cardWidth / 2) {
+    side = 'left'; // الجهة اليسرى = الميداليات
+} else {
+    side = 'right'; // الجهة اليمنى = الكؤوس
+}
+
                 
                 handleScoreUpdate(playerId, side, delta);
                 clickSound.play().catch(e => {});
