--- a/index.html
+++ b/index.html
@@ -951,21 +951,19 @@
                         </div>
                     </div>
                     
-                    <!-- الترتيب الجديد: الكؤوس يسار، الاسم وسط، الميداليات يمين -->
-                    <div class="card-header">
-                        <div class="score-area left">
-                            <div class="score-card" data-side="right" data-player-id="${p.id}">${p.right||0}</div>
-                        </div>
-                        <div class="player-name-section">
-                            <span>${p.name||'لاعب'}</span>
-                        </div>
-                        <div class="score-area right">
-                            <div class="score-card" data-side="left" data-player-id="${p.id}">${p.left||0}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>`;
-    }
+    <!-- الترتيب الصحيح: الميداليات يسار، الاسم وسط، الكؤوس يمين -->
+<div class="card-header">
+    <div class="score-area left">
+        <div class="score-card" data-side="left" data-player-id="${p.id}">${p.left||0}</div>
+    </div>
+    <div class="player-name-section">
+        <span>${p.name||'لاعب'}</span>
+    </div>
+    <div class="score-area right">
+        <div class="score-card" data-side="right" data-player-id="${p.id}">${p.right||0}</div>
+    </div>
+</div>
+
 
     // دالة إنشاء بطاقة اللاعب العادي المحدثة (عكس الأيقونات)
     function playerCard(p, index){
