--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
 
     .winner-card .card-header {
       position: absolute;
-      bottom: clamp(15px, 3vh, 25px);
-      left: 50%;
+      bottom: clamp(40px, 6vh, 60px); /* كان 15px */      left: 50%;
       transform: translateX(-50%);
       z-index: 10;
       pointer-events: none;
