--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 .winner-card .card-header {
   position: absolute;
-  bottom: clamp(40px, 6vh, 60px); /* كان 15px */
+    bottom: calc(var(--winner-avatar-size) * 0.2);
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
