--- a/index.html
+++ b/index.html
@@ -675,25 +675,29 @@
       }
     }
 
-/* تصغير البطاقات على هواتف بدقة عالية مثل S24 Ultra */
+/* هواتف عالية الكثافة مثل S24 Ultra */
 @media screen and (max-width: 1080px) and (min-resolution: 3dppx) {
   .card {
-    width: 280px;
-    height: 240px;
+    width: clamp(160px, 40vw, 220px);
+    height: clamp(180px, 45vw, 240px);
   }
+
   .winner-card {
-    max-width: 600px;
-    height: 220px;
+    max-width: clamp(250px, 80vw, 500px);
+    height: clamp(200px, 50vw, 260px);
   }
+
   .avatar {
-    width: 110px;
-    height: 110px;
+    width: clamp(70px, 20vw, 100px);
+    height: clamp(70px, 20vw, 100px);
   }
+
   .player-name-section {
-    font-size: 15px;
-    max-width: 120px;
+    font-size: clamp(11px, 2vw, 14px);
+    max-width: clamp(80px, 25vw, 120px);
   }
 }
+
 
 
     /* ===== تحسينات التفاعل ===== */
