--- a/index.html
+++ b/index.html
@@ -701,7 +701,21 @@
     font-size: clamp(11px, 2vw, 14px);
     max-width: clamp(80px, 25vw, 120px);
   }
+    .winner-card .bottom-icon.medal {
+    position: relative;
+    right: -10px;   /* حرك يمين */
+    top: -5px;      /* حرك فوق */
+    font-size: clamp(30px, 8vw, 50px);
+  }
+
+  .winner-card .bottom-icon.trophy {
+    position: relative;
+    left: -10px;    /* حرك يسار */
+    bottom: -5px;   /* حرك تحت */
+    font-size: clamp(30px, 8vw, 50px);
+  }
 }
+
 
 
 
